UPDATE(finish c-binding for pgbn::BigInteger)

--- a/test/c/CMakeLists.txt
+++ b/test/c/CMakeLists.txt
@@ -4,7 +4,7 @@ file(GLOB test_src_files *.c)
 foreach(file ${test_src_files})
     set(file_name ${file})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" file_name ${file})
-    project(${file_name}_C)
+    project(${file_name}_C "C")
     add_executable(${file_name}_C ${file})
-    target_link_libraries(${file_name}_C PGBigNumberBindingC)
+    target_link_libraries(${file_name}_C PGBigNumberBindingC stdc++)
 endforeach(file)
