--- a/test/c/CMakeLists.txt
+++ b/test/c/CMakeLists.txt
@@ -6,5 +6,5 @@ foreach(file ${test_src_files})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" file_name ${file})
     project(${file_name}_C "C")
     add_executable(${file_name}_C ${file})
-    target_link_libraries(${file_name}_C PGBigNumberBindingC stdc++)
+    target_link_libraries(${file_name}_C PGBigNumberBindingC PGBigNumber stdc++)
 endforeach(file)
