Fix bugs on Windows(MSVC)

--- a/test/c/CMakeLists.txt
+++ b/test/c/CMakeLists.txt
@@ -1,10 +1,11 @@
 set(CMAKE_C_STANDARD 11)
 
 file(GLOB test_src_files *.c)
+set(STD_CXX_LIB )
 foreach(file ${test_src_files})
     set(file_name ${file})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" file_name ${file})
     project(${file_name}_C "C")
     add_executable(${file_name}_C ${file})
-    target_link_libraries(${file_name}_C PGBigNumberBindingC PGBigNumber stdc++)
+    target_link_libraries(${file_name}_C PGBigNumberBindingC PGBigNumber ${STD_CXX_LIB})
 endforeach(file)
