--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,52 @@
-build
+########## For C++ ##########
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+########## For vscode ##########
+
 .vscode
+
+########## For jb-ide ##########
+
+.idea
+
+########## Misc ##########
+
+build
+out
+.vscode
+.vs
 LICENSE
 README.md
 README.zh_CN.md
