Fix bugs on linux(test with ubuntu)

--- a/test/c/CMakeLists.txt
+++ b/test/c/CMakeLists.txt
@@ -2,6 +2,10 @@ set(CMAKE_C_STANDARD 11)
 
 file(GLOB test_src_files *.c)
 set(STD_CXX_LIB )
+if(WIN32)
+else()
+    list(APPEND STD_CXX_LIB stdc++)
+endif(WIN32)
 foreach(file ${test_src_files})
     set(file_name ${file})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" file_name ${file})
