Refactor structure of project; Add examples; Add options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,21 +3,43 @@ set(DCMAKE_SH="CMAKE_SH-NOTFOUND")
 cmake_minimum_required(VERSION 3.16)
 set(CMAKE_CXX_STANDARD 17)
 
-set(LIBS_FOR_TEST PGBigNumber)
+set(PGBN_PROJECT_NAME PGBigNumber)
+set(LIBS_FOR_TEST ${PGBN_PROJECT_NAME})
+set(PGBN_STATIC_LIB ${PGBN_PROJECT_NAME})
+set(PGBN_C_STATIC_LIB PGBigNumberBindingC)
+set(STD_CXX_LIB )
 
-add_definitions(-DPGBN_DEBUG)
-add_definitions(-DPGZXB_DEBUG)
+if(NOT WIN32)
+    list(APPEND STD_CXX_LIB stdc++)
+endif(NOT WIN32)
+
+if($ENV{PGBN_DEBUG})
+    if($ENV{PGBN_DEBUG} EQUAL "1")
+        message("Debug mode")
+        add_definitions(-DPGBN_DEBUG)
+        add_definitions(-DPGZXB_DEBUG)
+        set(CMAKE_BUILD_TYPE Debug CACHE STRING "Open debug mode")
+    else($ENV{PGBN_DEBUG} EQUAL "1")
+        set(CMAKE_BUILD_TYPE Release CACHE STRING "Release")
+    endif($ENV{PGBN_DEBUG} EQUAL "1")
+endif($ENV{PGBN_DEBUG})
+
+if($ENV{PGBN_BUILD_TESTS})
+    if($ENV{PGBN_BUILD_TESTS} EQUAL "1")
+        add_subdirectory(tests)
+    endif($ENV{PGBN_BUILD_TESTS} EQUAL "1")
+endif($ENV{PGBN_BUILD_TESTS})
+
+if($ENV{PGBN_BUILD_EXAMPLES})
+    if($ENV{PGBN_BUILD_EXAMPLES} EQUAL "1")
+        add_subdirectory(examples)
+    endif($ENV{PGBN_BUILD_EXAMPLES} EQUAL "1")
+endif($ENV{PGBN_BUILD_EXAMPLES})
+
 add_definitions(-D__STDC_FORMAT_MACROS)
 add_definitions(-Wall)
-add_subdirectory(test)
 add_subdirectory(c)
-include_directories(include)
 
-file(GLOB_RECURSE  src_files src/*.cpp)
-
-# find_file(MAIN_FILE_PATH main.cpp ./src/)
-# message("main.cpp path : " ${MAIN_FILE_PATH})
-# list(REMOVE_ITEM src_files ${MAIN_FILE_PATH})
-
-project(PGBigNumber)
-add_library(PGBigNumber STATIC ${src_files})
+file(GLOB_RECURSE  pgbn_src_files src/*.cpp)
+project(${PGBN_PROJECT_NAME})
+add_library(${PGBN_PROJECT_NAME} STATIC ${pgbn_src_files})
