--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -7,6 +7,6 @@ add_definitions(-DPGBN_DEBUG)
 add_definitions(-DPGZXB_DEBUG)
 add_definitions(-Wall)
 
-project(PGBigNumberBindingC)
-add_library(PGBigNumberBindingC STATIC src/pgbn.cpp)
-target_link_libraries(PGBigNumberBindingC PUBLIC PGBigNumber)
+project(${PGBN_C_STATIC_LIB})
+add_library(${PGBN_C_STATIC_LIB} STATIC src/pgbn.cpp)
+target_link_libraries(${PGBN_C_STATIC_LIB} PUBLIC ${PGBN_STATIC_LIB})
