--- a/tests/c/CMakeLists.txt
+++ b/tests/c/CMakeLists.txt
@@ -1,15 +1,12 @@
 set(CMAKE_C_STANDARD 11)
 
+include_directories(../../c/src)
+
 file(GLOB test_src_files *.c)
-set(STD_CXX_LIB )
-if(WIN32)
-else()
-    list(APPEND STD_CXX_LIB stdc++)
-endif(WIN32)
 foreach(file ${test_src_files})
     set(file_name ${file})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" file_name ${file})
     project(${file_name}_C "C")
     add_executable(${file_name}_C ${file})
-    target_link_libraries(${file_name}_C PGBigNumberBindingC PGBigNumber ${STD_CXX_LIB})
+    target_link_libraries(${file_name}_C ${PGBN_C_STATIC_LIB} ${PGBN_STATIC_LIB} ${STD_CXX_LIB})
 endforeach(file)
