--- a/tests/parallel/CMakeLists.txt
+++ b/tests/parallel/CMakeLists.txt
@@ -4,5 +4,5 @@ foreach(file ${test_src_files})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" file_name ${file})
     project(${file_name})
     add_executable(${file_name} ${file})
-    target_link_libraries(${file_name} ${LIBS_FOR_TEST} pthread)
+    target_link_libraries(${file_name} ${LIBS_FOR_TEST} ${CMAKE_THREAD_LIBS_INIT})
 endforeach(file)
